# agentic-physics-question-generator

./: .cache_ggshield  .gitignore  README.md  config.yaml  long_test.sh  main.py  physics.py  pyproject.toml  pytest.ini  requirements.txt
DATASET/questions_v1/: physics_elec.csv  physics_g.csv  physics_np.csv  physics_np_old.csv  physics_sm.csv  physics_sm_old.csv
DATASET/questions_v2/: physics_elec.csv  physics_g.csv  physics_sm.csv
FINE_TUNE_GPT2/: QueryGPT2.ipynb
LLM/: __init__.py  llm.py  llm_Anthropic.py  llm_Base.py  llm_GPT2.py  llm_OpenAI.py  llm_RAG_Hgf.py
LLM_CONFIG/: config.json
NOVELTY_SCORE/: README.md  bleu.ipynb
QdrantDB/: meta.json
QdrantDB/collection/env_g/: storage.sqlite
QdrantDB/collection/env_sm/: storage.sqlite
TOPICS/: electrostatics.json  gravitation.json  instructions.md  simple_motion.json  test0  test0.json
UTILS/: action_estimate.py  graph_chain.py  rag_agent.py  rag_db.py  trusted_editing.py  utils.py  value_estimate.py  word_change.py
UTILS/test/: test_graph_chain.py  test_rl_learning.py
