[project]
name = "agentic-physicsQ"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-anthropic>=1.4.0",
    "langchain-core>=1.2.23",
    "langchain-huggingface>=1.2.1",
    "langchain-openai>=1.1.12",
    "langgraph>=1.1.3",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "torch>=2.11.0",
    "transformers>=5.4.0",
]
