[project]
name = "agentic-physicsQ"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colorama>=0.4.6",
    "langchain-anthropic>=1.4.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.23",
    "langchain-huggingface>=1.2.1",
    "langchain-openai>=1.1.12",
    "langchain-qdrant>=1.1.0",
    "langgraph>=1.1.3",
    "nltk>=3.9.4",
    "numpy>=2.4.3",
    "omegaconf>=2.3.0",
    "pandas>=3.0.1",
    "pypdf>=6.9.2",
    "qdrant-client>=1.17.1",
    "sentence-transformers>=5.3.0",
    "torch>=2.11.0",
    "transformers>=5.4.0",
]
